# Loka

./: .clang-format  .editorconfig  .env-mame.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  CURRENT_ISSUES.md  LICENSE.md  PHILOSOPHY.md  README.md  ROADMAP.md
.claude/: settings.local.json
Testing/: TAG
agent/: base.md  character.md  development.md
apple/: CMakeLists.txt
apple/carbon/: CMakeLists.txt
apple/common/carbon/: CMakeLists.txt
apple/common/cocoa/: CMakeLists.txt
apple/common/cocoa/src/: AppleString.mm
apple/ios/: CMakeLists.txt
apple/macos/: CMakeLists.txt
apple/macos/src/: DebugLog.mm  MacApp.hpp  MacApp.mm  MacBootstrap.mm  MacBuiltInSupport.hpp  MacBuiltInSupport.mm  MacObjCCompat.hpp  MacPlatformContext.hpp  MacPlatformContext.mm  MacPlatformHostActionLayoutHandlers.hpp  MacPlatformHostActionLayoutHandlers.mm  MacPlatformLeafLayoutHandlers.hpp  MacPlatformLeafLayoutHandlers.mm  MacPlatformNodeHandlers.hpp  MacPlatformNodeHandlers.mm  MacProfiler.cpp  MacProfiler.hpp  MacScenePlatformController.hpp  MacScenePlatformController.mm  MacWindow.hpp  MacWindow.mm  Utf8String.hpp  main.mm
apple/macos/src/context/: MacButtonContext.hpp  MacButtonContext.mm  MacCellContext.hpp  MacCellContext.mm  MacEditTextContext.hpp  MacEditTextContext.mm  MacImageViewContext.hpp  MacImageViewContext.mm  MacNodeContextMapper.hpp  MacNodeContextMapper.mm  MacOpenFileDialogContext.hpp  MacOpenFileDialogContext.mm  MacPopupMenuContext.hpp  MacPopupMenuContext.mm  MacRectSurfaceContext.hpp  MacRectSurfaceContext.mm  MacTextContext.hpp  MacTextContext.mm
apple/macos/src/testing/: MacScenePlatformTestAccess.hpp
apple/toolbox/: CMakeLists.txt
apple/toolbox/src/: ToolboxApp.cpp  ToolboxApp.hpp  ToolboxBootstrap.cpp  ToolboxControlIdAllocator.hpp  ToolboxEditControlLedger.hpp  ToolboxFocusedEditIndex.hpp  ToolboxNativeImage.cpp  ToolboxNativeImage.hpp  ToolboxOperatorNew.cpp  ToolboxPlatformContext.cpp  ToolboxPlatformContext.hpp  ToolboxPlatformLayoutHandlers.cpp  ToolboxPlatformLayoutHandlers.hpp  ToolboxProfiler.cpp  ToolboxProfiler.hpp  ToolboxScenePlatformController.cpp  ToolboxScenePlatformController.hpp  ToolboxString.cpp  ToolboxWindow.cpp  ToolboxWindow.hpp  ToolboxWindowContext.cpp  ToolboxWindowContext.hpp
apple/toolbox/src/context/: ToolboxButtonContext.cpp  ToolboxButtonContext.hpp  ToolboxCellContext.cpp  ToolboxCellContext.hpp  ToolboxEditTextContext.cpp  ToolboxEditTextContext.hpp  ToolboxImageViewContext.cpp  ToolboxImageViewContext.hpp  ToolboxLayoutUtil.hpp  ToolboxNodeContextMapper.cpp  ToolboxNodeContextMapper.hpp  ToolboxOpenFileDialogContext.cpp  ToolboxOpenFileDialogContext.hpp  ToolboxPopupMenuContext.cpp  ToolboxPopupMenuContext.hpp  ToolboxRectSurfaceContext.cpp  ToolboxRectSurfaceContext.hpp  ToolboxTextContext.cpp  ToolboxTextContext.hpp
apple/toolbox/src/debug/: ToolboxSceneDebugStats.cpp  ToolboxSceneDebugStats.hpp
cmake/: LokaTestSources.cmake  strip_classic.cmake
common/: App.hpp  BaseTypes.hpp  Button.hpp  EmptyContext.hpp  Page.cpp  Page.hpp  PlatformContext.hpp  Property.hpp  PropertyType.hpp  PropertyUtil.hpp  Renderer.hpp  Scene.hpp  State.cpp  State.hpp  (+7 more)
example/FloppyBird/: CMakeLists.txt  Size.r
example/FloppyBird/src/: GameLogic.hpp  MainNode.hpp  MyAppConfig.hpp  main.cpp
example/HelloWorld/: CMakeLists.txt  HelloWorld.r  Size.r
example/HelloWorld/src/: BmiCalculatorComponent.hpp  BmiFormComponent.hpp  ChangeContextButton.hpp  ErrorTestComponent.hpp  FormScene.cpp  FormScene.hpp  HelloWorldBoundary.hpp  HelloWorldComponent.hpp  HelloWorldContext.hpp  MacOSMain.mm  MainComponent.hpp  MainLeftPanel.cpp  MainLeftPanel.hpp  MainNode.cpp  MainNode.hpp  MainRightPanel.cpp  MainRightPanel.hpp  MyAppConfig.hpp  RootBoundary.hpp  ToolboxControlSlots.hpp  ToolboxMain.cpp  main.cpp
example/MineSweeper/: CMakeLists.txt  Size.r
example/MineSweeper/src/: MacOSMain.mm  MainNode.hpp  MyAppConfig.hpp  main.cpp
example/PerfArena/: CMakeLists.txt
example/PerfArena/src/: MainNode.hpp  MyAppConfig.hpp  main.cpp
example/SimpleViewer/: CMakeLists.txt  Size.r
example/SimpleViewer/src/: MacOSMain.mm  MainNode.hpp  MainNodeFlow.hpp  MyAppConfig.hpp  SimpleViewerFlowAdapters.hpp  main.cpp
example/StaticVsDynamic/: CMakeLists.txt
example/StaticVsDynamic/src/: MacOSMain.mm  MainNode.hpp  MyAppConfig.hpp  main.cpp
example/Tutorial/: CMakeLists.txt  README.md  Size.r
example/Tutorial/src/: DoItYourselfNode.hpp  MacOSMain.mm  MyAppConfig.hpp  Step1Node.hpp  Step2Node.hpp  Step3Node.hpp  Step4Node.hpp  TutorialShared.hpp  main.cpp
win32/: CMakeLists.txt  CMakePresets.json  README.md
win32/src/: CustomButton.hpp  FormScene.hpp  IncrementNode.hpp  MsgBoxWin32.cpp  SceneTests.hpp  Tests.cpp  Tests.hpp  Win32App.cpp  Win32App.hpp  Win32Bootstrap.cpp  Win32BuiltInSupport.cpp  Win32BuiltInSupport.hpp  Win32EditTextContext.cpp  Win32EditTextContext.hpp  Win32PlatformContext.cpp  Win32PlatformContext.hpp  Win32PlatformHostActionLayoutHandlers.cpp  Win32PlatformHostActionLayoutHandlers.hpp  Win32PlatformLeafLayoutHandlers.cpp  Win32PlatformLeafLayoutHandlers.hpp  Win32PlatformNodeHandlers.cpp  Win32PlatformNodeHandlers.hpp  Win32SceneContext.cpp  Win32SceneContext.hpp  Win32ScenePlatformController.cpp  Win32ScenePlatformController.hpp  Win32Window.cpp  Win32Window.hpp  main.c  main.cpp
win32/src/context/: Win32ButtonContext.cpp  Win32ButtonContext.hpp  Win32CellContext.cpp  Win32CellContext.hpp  Win32EditTextContext.cpp  Win32EditTextContext.hpp  Win32ImageViewContext.cpp  Win32ImageViewContext.hpp  Win32NodeContextMapper.cpp  Win32NodeContextMapper.hpp  Win32OpenFileDialogContext.cpp  Win32OpenFileDialogContext.hpp  Win32PopupMenuContext.cpp  Win32PopupMenuContext.hpp  Win32RectSurfaceContext.cpp  Win32RectSurfaceContext.hpp  Win32TextContext.cpp  Win32TextContext.hpp  Win32ThreadModalDialogScope.hpp
win32/src/platform/: Win32DebugLog.cpp  Win32Profiler.cpp  Win32Profiler.hpp  Win32String.cpp  Win32String.hpp
win32/src/testing/: Win32ScenePlatformTestAccess.hpp
(+504 files in other folders)
